--- a/src/StoneApple/view/common/header.html.twig
+++ b/src/StoneApple/view/common/header.html.twig
@@ -1,5 +1,9 @@
 <header>
-    <!-- TODO fix url -->
-    <h1><a href="/">Stone Apple</a></h1>
-    <baseline>Testdriving your fridge.</baseline>
+    <ul class="nav nav-pills pull-right">
+        <li class="active"><a href="#">Home</a></li>
+        <li><a href="#">About</a></li>
+        <li><a href="#">Contact</a></li>
+    </ul>
+    <h1 class="muted"><a href="/">Stone Apple</a></h1>
 </header>
+<hr>
