--- a/src/StoneApple/view/layout.html.twig
+++ b/src/StoneApple/view/layout.html.twig
@@ -3,36 +3,27 @@
     <head>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <meta name="description" content="A markdown-based website">
-        <meta name="author" content="A markdown writer">
-        <meta name="generator" content="SilexMarkdown">
+        <meta name="description" content="A website">
+        <meta name="author" content="Me">
+        <meta name="generator" content="StoneApple">
 
         <title>{{ title }}</title>
 
         <link href="{{ app.request.basepath }}/assets/bootstrap/css/bootstrap.min.css" rel="stylesheet">
         <link href="{{ app.request.basepath }}/assets/bootstrap/css/bootstrap-responsive.min.css" rel="stylesheet">
         <link href="{{ app.request.basepath }}/assets/css/styles.css" rel="stylesheet">
-
-        <!-- Le fav and touch icons -->
-        <link rel="apple-touch-icon-precomposed" sizes="144x144" href="{{ app.request.basepath }}/assets/ico/apple-touch-icon-144-precomposed.png">
-        <link rel="apple-touch-icon-precomposed" sizes="114x114" href="{{ app.request.basepath }}/assets/ico/apple-touch-icon-114-precomposed.png">
-        <link rel="apple-touch-icon-precomposed" sizes="72x72" href="{{ app.request.basepath }}/assets/ico/apple-touch-icon-72-precomposed.png">
-        <link rel="apple-touch-icon-precomposed" href="{{ app.request.basepath }}/assets/ico/apple-touch-icon-57-precomposed.png">
-        <link rel="shortcut icon" href="{{ app.request.basepath }}/assets/ico/favicon.png">
-
-        <script src="{{ app.request.basepath }}/assets/modernizr/modernizr.js"></script>
     </head>
     <body>
 
-{% include ('common/header.html.twig') %}
-
     <div class="container">
+
+        {% include ('common/header.html.twig') %}
 
         {% block content %}
             <h1>Documentation</h1>
         {% endblock %}
 
-{% include ('common/footer.html.twig') %}
+        {% include ('common/footer.html.twig') %}
 
     </div><!-- /container -->
 
