add left sidebar

--- a/src/StoneApple/view/layout.html.twig
+++ b/src/StoneApple/view/layout.html.twig
@@ -19,9 +19,11 @@
 
         {% include ('common/header.html.twig') %}
 
+        <div class="row-fluid">
         {% block content %}
             <h1>Documentation</h1>
         {% endblock %}
+        </div>
 
         {% include ('common/footer.html.twig') %}
 
