--- a/web/assets/css/styles.css
+++ b/web/assets/css/styles.css
@@ -4,3 +4,20 @@ header h1 {
 
 header h1 a { color: #999 }
 header h1 a:hover { color: #08c }
+
+.user_info img {
+    -webkit-border-radius: 4px;
+    -moz-border-radius: 4px;
+    border-radius: 4px;
+    border: 1px solid #FFF;
+
+    -webkit-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 8px rgba(0, 0, 0, 0.6);
+    -moz-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 8px rgba(0, 0, 0, 0.6);
+    box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 8px rgba(0, 0, 0, 0.6);
+}
+.user_info {
+    text-align: right;
+}
+.user_info div {
+    margin-top: 1em;
+}
