--- a/web/assets/css/styles.css
+++ b/web/assets/css/styles.css
@@ -1,11 +1,29 @@
+a { color: #FF4500; }
+a:hover, a:focus { color: #FF4500; }
+
 header h1 {
-    font-size: 24.5px;
+    text-align: right;
+    margin-top: 1em;
 }
 
 header h1 a { color: #999 }
 header h1 a:hover { color: #08c }
 
-.user_info img {
+h2 a { 
+    color: #FFA600; /*ABD26A;*/
+}
+
+h2 {
+    font-size: 22px;
+    line-height: 1em;
+    margin: 1em 0;
+}
+
+div.main {
+    padding-top: 1em;
+}
+
+.user_info img, article img.main {
     -webkit-border-radius: 4px;
     -moz-border-radius: 4px;
     border-radius: 4px;
@@ -17,7 +35,49 @@ header h1 a:hover { color: #08c }
 }
 .user_info {
     text-align: right;
+    color: #666;
+    border-bottom: 1px dashed #CCC;
 }
-.user_info div {
+.user_info .details {
     margin-top: 1em;
+}
+
+.user_info .details ul {
+    list-style: none;
+    margin: 1em;
+}
+
+.user_info .details ul li {
+    line-height: 2em;
+}
+
+article img.main {
+    float: left;
+    margin-right: 1em;
+}
+
+article {
+    clear: left;
+    padding: 1em 0;
+}
+
+article:first-of-type {
+    padding: 0;
+}
+
+article:first-of-type h2 {
+    margin-top: 0;
+}
+
+article .tagslist {
+    text-align: right;
+}
+
+article .tagslist a {
+    color: #CCC;
+}
+
+nav {
+    margin: 1.5em 0;
+    text-align: right;
 }
