--- a/src/StoneApple/view/posts.html.twig
+++ b/src/StoneApple/view/posts.html.twig
@@ -5,7 +5,9 @@
     {% for post in posts %}
         <article>
             <h2><a href="{{ path('post', {'slug': post.slug}) }}">{{ post.title }}</a></h2>
-	        <img class="main" src="{{ app.request.basepath }}/assets/img/archive-thumbnail-placeholder-small.gif" />
+	        <a class="thumbnail" href="{{ path('post', {'slug': post.slug}) }}">
+	        	<img class="main" src="{{ app.request.basepath }}/assets/img/archive-thumbnail-placeholder-small.gif" />
+	        </a>
             <p>{{ post.body|raw }}</p>
         </article>
     {% endfor %}
