some more design tinkering

--- a/src/StoneApple/view/common/header.html.twig
+++ b/src/StoneApple/view/common/header.html.twig
@@ -1,4 +1,6 @@
 <header>
-    <h1 class="muted"><a href="{{ app.url_generator.generate('homepage') }}">Stone Apple</a> <small>Blogging powered by awesome.</small></h1>
+    <h1 class="muted">
+    	<a href="{{ app.url_generator.generate('homepage') }}">Stone Apple</a> <small>Blogging powered by awesome.</small>
+    </h1>
 </header>
 <hr>
