--- a/web/assets/css/styles.css
+++ b/web/assets/css/styles.css
@@ -1,5 +1,16 @@
-a { color: #FF4500; }
-a:hover, a:focus { color: #FF4500; }
+@import url(http://fonts.googleapis.com/css?family=Maven+Pro:400,700);
+body {
+    font-family: "Helvetica Neue", Helvetica, arial, sans-serif;
+}
+
+a, h2 a:hover { color: #FF4500; }
+a:hover, a:focus { color: #B91F00; }
+
+h1, h2, h3 {
+    font-family: "Maven Pro", arial, sans-serif;
+}
+
+h2, h3 { font-weight: 400; }
 
 header h1 {
     text-align: right;
@@ -9,12 +20,11 @@ header h1 {
 header h1 a { color: #999 }
 header h1 a:hover { color: #08c }
 
-h2 a { 
-    color: #FFA600; /*ABD26A;*/
+h2 a {
+    color: #FFA600;
 }
 
 h2 {
-    font-size: 22px;
     line-height: 1em;
     margin: 1em 0;
 }
@@ -53,8 +63,8 @@ div.main {
 }
 
 article a.thumbnail {
-    float: left;
-    margin-right: 1em;
+    float: right;
+    margin-left: 1em;
 }
 
 article {
