--- a/src/StoneApple/view/admin/index.html.twig
+++ b/src/StoneApple/view/admin/index.html.twig
@@ -1,12 +1,12 @@
 {% extends 'layout.html.twig' %}
 
 {% block sidebarleft %}
-    <div class="span3">&nbsp;</div>
+    <div class="span3">You are logged in as {{ user.username }}. <a href="{{ app.url_generator.generate('admin_logout') }}">Logout</a>.</div>
 {% endblock %}
 
 {% block content %}
 <div class="span9">
-    <h2>Welcome</h2>
+    <h2>Administration</h2>
 
     <div class="alert alert-success">
         Welcome {{ user.username }}.
