--- a/src/StoneApple/view/common/footer.html.twig
+++ b/src/StoneApple/view/common/footer.html.twig
@@ -5,7 +5,18 @@
     <p class="pull-right"><a href="#">Back to top</a></p>
     <p>&copy; 2013 Company, Inc. &middot; <a href="#">Privacy</a> &middot; <a href="#">Terms</a></p>
 </footer>
-<!--<script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
-<script>window.jQuery || document.write('<script src="{{ app.request.basepath }}/assets/js/jquery.js/"><\/script>')</script>
-<script src="{{ app.request.basepath }}/assets/js/scripts.js"></script>-->
+
+{% if app.ga_account %}
+<script type="text/javascript">
+    var _gaq = _gaq || [];
+    _gaq.push(['_setAccount', '{{ app.ga_account }}']);
+    _gaq.push(['_trackPageview']);
+
+    (function() {
+        var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
+        ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
+        var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
+    })();
+</script>
+{% endif %}
 
